# legado

./: .gitignore  English.md  README.md  api.md  build.gradle  cbz_fix_summary.md  gradle.properties  package.json  settings.gradle
.github/ISSUE_TEMPLATE/: 01-bugReport.yml  02-featureRequest.yml
.github/workflows/: cronet.yml  delete_actions.yml  release.yml  stale.yml  test.yml  web.yml
app/: build.gradle  cronet-proguard-rules.pro  proguard-rules.pro
app/schemas/io.legado.app.data.AppDatabase/: 76.json  77.json  78.json  79.json  80.json  81.json  82.json  83.json  84.json  85.json  86.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: cronet.json  updateLog.md
app/src/main/assets/defaultData/: rssSources.json
app/src/main/assets/web/: index.html
app/src/main/res/anim/: dialog_enter.xml  dialog_exit.xml
app/src/main/res/color/: selector_image.xml  selector_white_icon.xml
app/src/main/res/drawable/: bg_edit.xml  (+26 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
modules/quickjs/: build.gradle  consumer-rules.pro
modules/quickjs/src/main/cpp/: CMakeLists.txt
modules/quickjs/src/main/cpp/jni/: jni_bridge.cpp  jni_callbacks.cpp  jni_callbacks.h  jni_handle.cpp  jni_handle.h  jni_object_class.cpp  jni_object_class.h  jni_value_convert.cpp  jni_value_convert.h
modules/rhino/: build.gradle  consumer-rules.pro
modules/web/: package.json  vite.config.ts
modules/web/scripts/: sync.js
modules/web/src/: book.d.ts  components.d.ts  main.ts  source.d.ts
modules/web/src/api/: api.ts  axios.ts  index.ts
modules/web/src/assets/: sourceeditor.css  webui.css
modules/web/src/components/: BookItems.vue  ReadSettings.vue  SourceDebug.vue  SourceHelp.vue  SourceItem.vue  SourceJson.vue  SourceList.vue  SourceTabForm.vue  SourceTabTools.vue  ToolBar.vue
modules/web/src/config/: sourceConfig.d.ts
modules/web/src/hooks/: loading.css  loading.ts
modules/web/src/router/: bookRouter.ts  index.ts  sourceRouter.ts
modules/web/src/store/: bookStore.ts  sourceStore.ts
modules/web/src/utils/: souce.ts  toast.ts
modules/web/src/views/: BookChapter.vue  BookShelf.vue  SourceEditor.vue  Welcome.vue
(+1039 files in other folders)
